# http-dumper

./: Cargo.toml  Dockerfile  Makefile  README.md  index.yaml
.github/workflows/: build.yaml  helm.yaml
charts/: Chart.yaml  values.yaml
charts/httpdumper/: Chart.yaml  values.yaml
charts/httpdumper/templates/: deployment.yaml  hpa.yaml  service.yaml
charts/templates/: _helpers.tpl  deployment.yaml
src/: main.rs  middleware.rs  router.rs
