[package]
name = "http_dumper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
axum-server = { version = "0.5", features = ["tls-rustls"] }
tokio = { version = "1.28", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
openssl = { version = "0.10", features = ["vendored"] }
clap = { version = "4.3", features = ["derive", "env"] }
http-body-util = "0.1.1"
nu-ansi-term = "0.50.0"
hyper = "1.2.0"
